--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
                 <source src="resources/video/excursion.mp4" type="video/mp4">
 
             </video>
-            <h3>Your personal travel guide</h3>
-            <p>Excursion remembers places you like, and recommends new points of interest around you</p>
+            <h3 class="heading--three">Your personal travel guide</h3>
+            <p class="intro">Excursion remembers places you like, and recommends new points of interest around you</p>
             <p><img src="resources/images/camp.webp"/></p>
             <p><img src="resources/images/phone.webp"/></p>
-            <h2>Coming Soon for iPhone and Android</h2>
+            <h2 class="heading--two">Coming Soon for iPhone and Android</h2>
             <p><a id="link" href="#">Download Excursion (Coming soon)</a></p>
 
 
         </section>
-        <footer><p>© Excursion</p></footer>
+        <footer><p class="footer">© Excursion</p></footer>
     </body>
 </html>
